jfDVR : try using ZGC without forcing gc()